fixtures/errors/no_rule_matches.hu
@use * from "helpers.hu"

inflection incomplete for {tense, number} {
  requires stems: root

  [tense=present, number=sg] -> `{root}s`
  # missing: present+pl, past+sg, past+pl
}

entry broken {
  headword: "broken"
  tags: [parts_of_speech=verb]
  stems { root: "break" }
  inflection_class: incomplete
  meaning: "to break"
}
